--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ allprojects {
         // a runtime implementation to avoid NoClassDefFoundErrors
         testRuntime "org.slf4j:slf4j-log4j12:1.7.5"
         testRuntime "log4j:log4j:1.2.17"
+       compile 'org.apache.httpcomponents:httpclient:4.5.3'
    }
 }
 
